--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,8 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
+
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +32,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.App-body {
+    background-color: #21D4FD;
+    background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 }
